logs/django-mediagenerator-kensho.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/django_mediagenerator_kensho-1.6.egg-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mediagenerator'...
Listing './lib/python3.5/site-packages/mediagenerator/contrib'...
Listing './lib/python3.5/site-packages/mediagenerator/filters'...
Compiling './lib/python3.5/site-packages/mediagenerator/filters/closure.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/closure.py", line 33
    print 'Closure compiler took', "%0.3fs" % ((time.time() - start_time))
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/coffeescript.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/coffeescript.py", line 59
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/handlebars.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/handlebars.py", line 78
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/less.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/less.py", line 171
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mediagenerator/filters/pyjslibs'...
Compiling './lib/python3.5/site-packages/mediagenerator/filters/sass.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/sass.py", line 103
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/uglifier.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/uglifier.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/filters/yuicompressor.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/filters/yuicompressor.py", line 26
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mediagenerator/generators'...
Listing './lib/python3.5/site-packages/mediagenerator/generators/bundles'...
Compiling './lib/python3.5/site-packages/mediagenerator/generators/bundles/bundles.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/generators/bundles/bundles.py", line 83
    print 'Already exists %r' % url
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mediagenerator/management'...
Listing './lib/python3.5/site-packages/mediagenerator/management/commands'...
Compiling './lib/python3.5/site-packages/mediagenerator/management/commands/importsassframeworks.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/management/commands/importsassframeworks.py", line 68
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/management/commands/watch_media.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/management/commands/watch_media.py", line 92
    print ' '.join(run)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mediagenerator/middleware.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/middleware.py", line 60
    print "Watchdog Observer is now watching static media file dirs"
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mediagenerator/templates'...
Listing './lib/python3.5/site-packages/mediagenerator/templates/mediagenerator'...
Listing './lib/python3.5/site-packages/mediagenerator/templates/mediagenerator/manifest'...
Listing './lib/python3.5/site-packages/mediagenerator/templatetags'...
Compiling './lib/python3.5/site-packages/mediagenerator/utils.py'...
***   File "./lib/python3.5/site-packages/mediagenerator/utils.py", line 95
    print "Mediagenerator cache file (%r) looked empty" % file_path
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
